feat(auth,jobs): implement JWT authentication and keyset/offset pagination
- Implement JWT auth with BCrypt, JwtService, and JwtAuthenticationFilter
- Add User entity, UserRepository, AuthService, and AuthController (/auth/register, /auth/login)
- Add offset & keyset (cursor-based) pagination with Spring Data Specifications
- Add /admin/jobs/summary endpoint using optimized native sql query to eliminate N+1 issues
- Add comprehensive unit, slice, and integration tests for auth and pagination flows
- Add EXPLAIN ANALYZE reference queries for performance tuning